--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "tsc",
         "dev": "ts-node ./lib/server.ts",
+        "dev:watch": "nodemon -e ts -w ./lib -x npm run dev",
         "start": "nodemon ./dist/server.js",
         "prod": "npm run build && npm run start"
     },
