--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,11 @@
     },
     "homepage": "https://github.com/supdegrave/shibari-notes#readme",
     "dependencies": {
+        "@types/cors": "^2.8.4",
         "@types/express": "^4.16.0",
+        "@types/mongoose": "^5.3.5",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.5",
         "express": "^4.16.4",
         "mongoose": "^5.4.0",
         "nodemon": "^1.18.9",
