--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "server": "cd /Users/stuart/localhost/projects/shibari-notes/server && npm run dev:watch",
         "client": "cd /Users/stuart/localhost/projects/shibari-notes/client && ng serve",
-        "start": "concurrently \"npm run server\" \"npm run client\"",
-        "fnord": "echo blarg"
+        "start": "concurrently \"npm run server\" \"npm run client\""
     },
     "repository": {
         "type": "git",
