--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "concurrently --prefix pid \"npm run server\" \"npm run client\"",
         "server": "cd ./server && npm run dev:watch",
         "client": "cd ./client && ng serve",
-        "start": "concurrently --prefix pid \"npm run server\" \"npm run client\""
+        "mongo:server": "brew services start mongodb-community",
+        "mongo:cli": "mongo",
+        "heroku:deploy": "git push heroku master"
     },
     "repository": {
         "type": "git",
