--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "concurrently --prefix pid \"npm run server\" \"npm run client\"",
-        "server": "cd ./server && npm run dev:watch",
-        "client": "cd ./client && ng serve",
-        "mongo:server": "brew services start mongodb-community",
+        "start": "concurrently --prefix pid \"npm run start:mongodb\" \"npm run start:server\" \"npm run start:client\"",
+        "start:server": "cd ./server && npm run dev:watch",
+        "start:client": "cd ./client && ng serve",
+        "start:mongodb": "brew services start mongodb-community",
         "mongo:cli": "mongo",
         "heroku:deploy": "git push heroku master"
     },
