--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "## Set up mongoDB hosting",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test:server": "echo \"no server tests defined yet\"",
+        "test:client": "cd client && ng test",
         "start": "concurrently --prefix pid \"npm run start:mongodb\" \"npm run start:server\" \"npm run start:client\"",
         "start:server": "cd ./server && npm run dev:watch",
         "start:client": "cd ./client && ng serve",
