--- a/.github/workflows/karma.yml
+++ b/.github/workflows/karma.yml
@@ -6,14 +6,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v2
       
-    - name: Node $
-      uses: actions/setup-node@v1
-      with:
-        node-version: $
+#     - name: Node $
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: $
 
     - name: Run Client Karma tests
       run: |
