--- a/.github/workflows/karma.yml
+++ b/.github/workflows/karma.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    with:
+      node-version: '10.x'
       
 #     - name: Node $
 #       uses: actions/setup-node@v1
