--- a/.github/workflows/karma.yml
+++ b/.github/workflows/karma.yml
@@ -4,22 +4,13 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         node-version: [12.x]
-
     steps:
     - uses: actions/checkout@v2
-    with:
-      node-version: '10.x'
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
       
-#     - name: Node $
-#       uses: actions/setup-node@v1
-#       with:
-#         node-version: $
-
     - name: Run Client Karma tests
       run: |
         npm ci
