--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "homepage": "https://github.com/supdegrave/shibari-notes#readme",
     "devDependencies": {
+        "@angular/cli": "^9.0.2",
         "prettier": "1.19.1",
         "puppeteer": "^2.1.1"
     }
