--- a/.github/workflows/karma.yml
+++ b/.github/workflows/karma.yml
@@ -11,5 +11,4 @@ jobs:
         with:
           node-version: '10.x'
       - run: npm install
-      - run: cd client 
-      - run: npm run test:headless
+      - run: cd client && npm run test:headless
