--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
         "test": "ng test",
         "test:headless": "ng test --watch=false --browsers=ChromeHeadlessCustom",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "cypress": "cypress run",
+        "cypress:open": "cypress open"
     },
     "private": true,
     "dependencies": {
@@ -39,6 +41,7 @@
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.3.0",
+        "cypress": "^4.0.2",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~3.0.0",
