--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,12 +2,26 @@ name: Cypress
 
 on: [push]
 
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v1
+#         with:
+#           node-version: '10.x'
+#       - run: npm run test:cypress
+#     name: Cypress
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  cypress-run:
+    runs-on: ubuntu-16.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '10.x'
-      - run: npm run test:cypress
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Cypress run
+      uses: cypress-io/github-action@v1
+      with:
+        build: npm run build
+        start: npm start
+        wait-on: http://localhost:4200
