--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Cypress run
       uses: cypress-io/github-action@v1
       with:
+        working-directory: client
         build: npm run build
         start: npm start
         wait-on: http://localhost:4200
