--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Cypress run
       uses: cypress-io/github-action@v1
       with:
+        # build: npm run build
+        start: npm run start
         working-directory: client
-        build: npm run build
-        start: npm start
         wait-on: http://localhost:4200
