--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         # build: npm run build
         start: npm run start
-        working-directory: client
+        # working-directory: client
         wait-on: http://localhost:4200
