--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
         "build": "ng build",
         "test": "ng test",
         "test:headless": "ng test --watch=false --browsers=ChromeHeadlessCustom",
+        "ci:karma": "ng test --watch=false --browsers=ChromeHeadlessCustom",
+        "ci:cypress": "npm install && nom start & cypress run",
         "lint": "ng lint",
         "e2e": "ng e2e",
         "cypress": "cypress run",
